demo-app/deploy/middleware.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: demo-app-prefix
  namespace: demo-app
spec:
  stripPrefix:
    prefixes:
      - /demo-app
